--- a/dev-workflow-ui/webContent/includes/components/taskDetails/descriptionCardHeaderActions.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/taskDetails/descriptionCardHeaderActions.xhtml
@@ -4,32 +4,34 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
   xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 
+  <c:set var="task" value="#{tasksDetailsIvyDevWfBean.selectedTask}" />
+
   <div class="detail-action-container">
     <h:form id="actionMenuForm">
       <p:linkButton href="#{tasksDetailsIvyDevWfBean.executeTaskLink}" value="Start"
-        id="taskStartBtn" disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.canBeStarted()}" icon="si si-arrow-right-1" />
+        id="taskStartBtn" disabled="#{!task.canBeStarted()}" icon="si si-arrow-right-1" />
 
       <p:commandButton value="Sidesteps" styleClass="ml-1 ui-button-secondary" id="sidestepsBtn"
-        rendered="#{tasksDetailsIvyDevWfBean.selectedTask.renderSidestepBtn()}" icon="si si-arrow-down-1" />
+        rendered="#{task.renderSidestepBtn()}" icon="si si-arrow-down-1" />
       <p:menu id="sidestepMenu" overlay="true" trigger="sidestepsBtn" my="right top" at="right bottom"
         model="#{tasksDetailsIvyDevWfBean.sidestepsMenuModel}" styleClass="menu-no-icons" />
 
       <p:commandButton styleClass="ml-1 ui-button-secondary ui-button-outlined rounded-button" id="taskActionsBtn"
-        disabled="#{tasksDetailsIvyDevWfBean.selectedTask.done}" icon="si si-navigation-menu-horizontal" />
+        disabled="#{task.done}" icon="si si-navigation-menu-horizontal" />
       <p:menu id="actionsMenu" overlay="true" trigger="taskActionsBtn" my="right top" at="right bottom">
         <p:menuitem value="Reset" actionListener="#{tasksDetailsIvyDevWfBean.reset()}" update="taskDetail, workflowEvents:workflowEvents, @form"
-          disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.canReset()}" id="taskResetBtn"
+          disabled="#{!task.canReset()}" id="taskResetBtn"
           icon="si si-road-sign-u-turn-left" />
         <p:menuitem value="Delegate" onclick="PF('delegateTaskModal').show()" id="taskDelegateBtn"
-          disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.state.active}" icon="si si-move-to-bottom" />
+          disabled="#{!task.state.active}" icon="si si-move-to-bottom" />
         <p:menuitem value="Park" actionListener="#{tasksDetailsIvyDevWfBean.park()}" update="taskDetail, workflowEvents:workflowEvents, @form" id="taskParkBtn"
-          disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.canPark()}" icon="si si-road-sign-u-turn-right" />
+          disabled="#{!task.canPark()}" icon="si si-road-sign-u-turn-right" />
         <p:menuitem value="Destroy" actionListener="#{tasksDetailsIvyDevWfBean.destroy()}" update="taskDetail, workflowEvents:workflowEvents, @form"
-          disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.state.active}" id="taskDestoryBtn" icon="si si-delete-1" />
+          disabled="#{!task.state.active}" id="taskDestoryBtn" icon="si si-delete-1" />
         <p:menuitem value="Clear delay" actionListener="#{tasksDetailsIvyDevWfBean.clearDelay}" update="taskDetail, workflowEvents:workflowEvents, @form"
-          disabled="#{tasksDetailsIvyDevWfBean.selectedTask.delayTimestamp == null}" icon="si si-button-refresh-arrows" id="taskClearDelayBtn" />
+          disabled="#{task.delayTimestamp == null}" icon="si si-button-refresh-arrows" id="taskClearDelayBtn" />
         <p:menuitem value="Expire now" actionListener="#{tasksDetailsIvyDevWfBean.expireTask}" update="taskDetail, workflowEvents:workflowEvents, @form"
-          disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.state.active}" icon="si si-alarm-bell-timer"
+          disabled="#{!task.state.active}" icon="si si-alarm-bell-timer"
           rendered="#{engineModeIvyDevWfBean.demoOrDesigner}" id="taskExpireBtn" />
       </p:menu>
     </h:form>
