--- a/dev-workflow-ui/webContent/resources/components/datetime.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/datetime.xhtml
@@ -8,6 +8,6 @@
 
 <cc:implementation>
   <h:outputText id="datetime" value="#{dateTimeIvyDevWfBean.getPrettyTime(cc.attrs.datetime)}" />
-  <p:tooltip for="datetime" value="#{dateTimeIvyDevWfBean.getDateTime(cc.attrs.datetime)}" position="top" />
+  <p:tooltip for="datetime" value="#{dateTimeIvyDevWfBean.getDefault(cc.attrs.datetime)}" position="top" />
 </cc:implementation>
 </html>
