Streamline icon to use the same family as surrounding icons

--- a/dev-workflow-ui/webContent/includes/template/template.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/template.xhtml
@@ -55,7 +55,7 @@
 
             <li class="topbar-item">
               <a href="#{sidebarIvyDevWfBean.cockpitPath}" title="Engine Cockpit">
-                <i class="topbar-icon si si-cog animated swing"></i>
+                <i class="topbar-icon pi pi-cog"></i>
               </a>
             </li>
 
