--- a/dev-workflow-ui/webContent/includes/components/taskDetails/descriptionCardHeaderActions.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/taskDetails/descriptionCardHeaderActions.xhtml
@@ -11,6 +11,11 @@
       <p:linkButton href="#{tasksDetailsIvyDevWfBean.executeTaskLink}" value="Start"
         id="taskStartBtn" disabled="#{!task.canBeStarted()}" icon="si si-arrow-right-1" />
 
+      <p:commandButton id="taskNotesBtn" styleClass="ml-1 ui-button-secondary ui-button-outlined rounded-button"
+        disabled="#{0 >= task.notes.size()}" icon="si si-notes-quill"
+        actionListener="#{tasksDetailsIvyDevWfBean.openNotesDialog()}" />
+      <p:tooltip for="taskNotesBtn" value="Show task notes" />
+
       <p:commandButton value="Sidesteps" styleClass="ml-1 ui-button-secondary" id="sidestepsBtn"
         rendered="#{task.renderSidestepBtn()}" icon="si si-arrow-down-1" />
       <p:menu id="sidestepMenu" overlay="true" trigger="sidestepsBtn" my="right top" at="right bottom"
