--- a/dev-workflow-ui/webContent/includes/components/taskDetails/descriptionCardHeaderActions.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/taskDetails/descriptionCardHeaderActions.xhtml
@@ -13,7 +13,7 @@
 
       <p:commandButton id="taskNotesBtn" styleClass="ml-1 ui-button-secondary ui-button-outlined rounded-button"
         disabled="#{0 >= task.notes.size()}" icon="si si-notes-quill"
-        actionListener="#{tasksDetailsIvyDevWfBean.openNotesDialog()}" />
+        actionListener="#{notesBean.openNotesDialog(task.Uuid)}" />
       <p:tooltip for="taskNotesBtn" value="Show task notes" />
 
       <p:commandButton value="Sidesteps" styleClass="ml-1 ui-button-secondary" id="sidestepsBtn"
