--- a/dev-workflow-ui/webContent/view/case.xhtml
+++ b/dev-workflow-ui/webContent/view/case.xhtml
@@ -22,11 +22,13 @@
                   <h6 class="m-0">Description</h6>
                 </div>
                 <div>
-                  <p:commandButton id="caseNotesBtn" styleClass="ui-button-secondary ui-button-outlined rounded-button"
-                    disabled="#{0 >= casesDetailsIvyDevWfBean.selectedCase.notes.size()}" icon="si si-notes-quill"
-                    actionListener="#{notesBean.openNotesDialog(casesDetailsIvyDevWfBean.selectedCaseId)}" />
+                  <p:badge value="#{casesDetailsIvyDevWfBean.selectedCase.notes.size()}">
+                    <p:commandButton id="caseNotesBtn" styleClass="ui-button-secondary ui-button-outlined rounded-button"
+                      disabled="#{0 >= casesDetailsIvyDevWfBean.selectedCase.notes.size()}" icon="si si-notes-quill"
+                      actionListener="#{notesBean.openNotesDialog(casesDetailsIvyDevWfBean.selectedCaseId)}" />
+                  </p:badge>
                   <p:tooltip for="caseNotesBtn" value="Show case notes" position="top"/>
-                  <p:commandButton icon="si si-delete-1" styleClass="ui-button-danger rounded-button ml-1"
+                  <p:commandButton icon="si si-delete-1" styleClass="ui-button-danger rounded-button ml-2"
                     disabled="#{not casesDetailsIvyDevWfBean.canBeDestoryed()}" id="caseDestroyBtn"
                     actionListener="#{casesDetailsIvyDevWfBean.selectedCase.destroy}" update="@this, caseDetails, caseHierarchy" />
                   <p:tooltip for="caseDestroyBtn" value="Destroy case" position="top"/>
