--- a/dev-workflow-ui/webContent/includes/components/statistics/taskStatisticsChart.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/statistics/taskStatisticsChart.xhtml
@@ -6,7 +6,7 @@
   <ui:composition template="/includes/template/statisticsCardBare.xhtml">
     <ui:define name="content">
       <h4>Tasks statistics</h4>
-      <p:lineChart model="#{statisticsBean.tasksPerHourChart}" style="max-height: 20rem"/>
+      <p:lineChart id="taskStatisticsChart" model="#{statisticsBean.tasksPerHourChart}" style="max-height: 20rem"/>
     </ui:define>
   </ui:composition>
 </h:body>
