--- a/dev-workflow-ui/webContent/includes/components/statistics/taskTopWorkers.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/statistics/taskTopWorkers.xhtml
@@ -5,7 +5,7 @@
 <h:body>
   <ui:composition template="/includes/template/statisticsCardBare.xhtml">
     <ui:define name="content">
-      <h4>Top task creators</h4>
+      <h4>Top task workers</h4>
       <p:barChart model="#{statisticsBean.topTaskWorkersModel}" style="max-height: 20rem; max-width: 36rem;"
         rendered="#{statisticsBean.topTaskWorkersModel != null}" />
       <h:panelGroup layout="block" rendered="#{statisticsBean.topTaskWorkersModel == null}"
