XIVY-14658 Streamline datetime component and occurences
- renamed "datetime" component to "time" (because it shows prettytime and datetime on hover)
- new "datetime" component which shows datetime and on hover prettytime
- those components are now used on case and task details pages
- streamline "N/A" string behaviour by removing it

--- a/dev-workflow-ui/webContent/includes/components/caseDetails/description.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/description.xhtml
@@ -32,18 +32,14 @@
     <h:outputText value="#{case.category.name}" id="category" />
 
     <h:outputText value="Created" />
-    <h:outputText value="#{dateTimeIvyDevWfBean.getDefault(case.getStartTimestamp())}"
-      id="createdDate" />
+    <jc:datetime datetime="#{case.startTimestamp}" id="createdDate" />
 
     <h:outputText value="Completed on" />
-    <h:outputText value="#{dateTimeIvyDevWfBean.getDetailed(case.getEndTimestamp())}"
-      id="expiryDate" />
+    <jc:datetime datetime="#{case.endTimestamp}" id="expiryDate" />
 
     <h:outputText value="Description" />
     <h:outputText value="#{casesDetailsIvyDevWfBean.description}" id="caseDescription" />
   </p:panelGrid>
   <p:tooltip for="caseId" value="ID: #{case.getId()}" />
-  <p:tooltip for="createdDate" value="#{dateTimeIvyDevWfBean.getPrettyTime(case.getStartTimestamp())}"
-    position="top" />
 
 </ui:composition>
