--- a/dev-workflow-ui/webContent/resources/components/time.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/time.xhtml
@@ -7,7 +7,7 @@
 </cc:interface>
 
 <cc:implementation>
-  <h:outputText id="datetime" value="#{dateTimeIvyDevWfBean.getDefault(cc.attrs.datetime)}" />
-  <p:tooltip for="datetime" value="#{dateTimeIvyDevWfBean.getPrettyTime(cc.attrs.datetime)}" position="top" />
+  <h:outputText id="datetime" value="#{dateTimeIvyDevWfBean.getPrettyTime(cc.attrs.datetime)}" />
+  <p:tooltip for="datetime" value="#{dateTimeIvyDevWfBean.getDefault(cc.attrs.datetime)}" position="top" />
 </cc:implementation>
 </html>
