--- a/dev-workflow-ui/webContent/view/notesDialog.xhtml
+++ b/dev-workflow-ui/webContent/view/notesDialog.xhtml
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:ic="http://ivyteam.ch/jsf/component" xmlns:p="http://primefaces.org/ui"
-  xmlns:pe="http://primefaces.org/ui/extensions">
+  xmlns:pe="http://primefaces.org/ui/extensions" xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 <h:head>
   <f:attribute name="primefaces.THEME" value="#{ivyFreyaTheme.theme}" />
   <meta charset="utf-8" />
@@ -50,7 +50,7 @@
               </div>
               <div class="text-color-secondary">
                 <h:outputText value="#{note.writterName} • " />
-                <h:outputText value="#{dateTimeIvyDevWfBean.getDateTimeNoYear(note.creationTimestamp)}" />
+                <jc:time datetime="#{note.creationTimestamp}" />
               </div>
             </div>
           </p:column>
