XIVY-14658 Add started cases list to homepage

--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -48,6 +48,7 @@ a > i.detail-btn {
 }
 .ui-datatable .icon-row {
   width: 20px;
+  text-align: center;
 }
 .ui-datatable .table-btn-1 {
   width: 40px;
