XIVY-14658 Less padding on tables

--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -314,3 +314,8 @@ body .notification-scroll>.ui-datascroller-content::-webkit-scrollbar {
   opacity: 0.5;
 }
 
+/* Freya adjustments */
+body .ui-datatable .ui-datatable-data > tr > td {
+  padding: 0.5rem;
+}
+
